# distributed-systems

./: .gitignore  requirements.txt
lab1/: pom.xml
lab1/exercises/python/: PythonUdpClient.py
lab1/homework/: pom.xml
lab2/: pyproject.toml
lab2/exercises/: distributed.py  doodle.py  openapi.json
lab2/homework/: main.py  openapi.json
lab2/homework/frontend/: package-lock.json  package.json
lab2/homework/frontend/src/: App.tsx  index.css
lab2/homework/frontend/src/components/: InputForm.tsx  Results.tsx
lab3-4/homework/A2/: gen.sh
lab3-4/homework/A2/client/: package-lock.json  package.json  tsconfig.json
lab3-4/homework/A2/proto/: run.proto
lab3-4/homework/A2/server/: main.py  pyproject.toml  server_state.json
lab3-4/homework/I2/: gen.sh  test.sh
lab3-4/homework/I2/client/: main.py
lab3-4/homework/I2/server/: main.py  pom.xml  pyproject.toml
lab3-4/homework/I2/slice/: Servants.ice  hello.ice
lab5/: pyproject.toml
lab5/exercises/: lab-ray.ipynb
lab5/exercises-homework/: lab-ray.ipynb
lab5/homework/: lab-ray.html  lab-ray.ipynb
lab6/exercises/src/: Z1_Consumer.java  Z1_Producer.java
lab6/homework/: pyproject.toml  setup.sh
lab6/homework/src/admin/: client.py  main.py
lab6/homework/src/cli/: base.py
lab7/: setup.sh  start-client.sh  start-server.sh
lab7/exercises/: 4.sh  script.sh  setup.sh  start-client.sh  start-server.sh
lab7/homework/: main.py  pyproject.toml  setup.sh  start.sh  stop.sh
lab7/homework/scripts/: setup-cluster.sh  setup-zookeeper.sh  start-client.sh  start-cluster.sh  stop-cluster.sh  stop-ports.sh
(+57 files in other folders)
